<resources>
    <string name="app_name">Nutritional</string>
    <string name="username">UserName</string>
    <string name="studentno">StudentNo</string>
    <string name="password">PassWord</string>
    <string name="register">Register</string>
    <string name="parentname">ParentName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>