<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    tools:context=".activity.account.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/register_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/studentno"
            android:lines="1"
            android:maxLength="6"
            android:paddingStart="10dp" />


        <Spinner
            android:id="@+id/register_spinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:entries="@array/SchoolName" />

        <EditText
            android:id="@+id/register_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/parentname"
            android:lines="1"
            android:maxLength="12"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:lines="1"
            android:maxLength="12"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:lines="1"
            android:maxLength="8"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/register" />
    </LinearLayout>

    <include
        layout="@layout/copyright"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>